# skribo

./: AUTHORS  Cargo.toml  LICENSE-MIT  README.md
docs/: design.md  reading_list.md  requirements.md  script_matching.md  ucd.md
examples/: render.rs
scripts/: gen_tables.py
src/: collection.rs  harfbuzz.rs  hb_layout.rs  lib.rs  session.rs  tables.rs  unicode_funcs.rs
