[package]
name = "skribo"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "text", "formatting", "layout"]
repository = "https://github.com/linebender/skribo"
description = "A Rust library for low-level text layout."
readme = "README.md"
categories = ["graphics", "text-processing"]

[dependencies]
harfbuzz = "0.4.0"
harfbuzz-sys = "0.5.0"
font-kit = { version = "0.10"} #, features = ["loader-freetype-default"] }
pathfinder_geometry = "0.5.1"
unicode-normalization = "0.1.13"
log = "0.4.11"

[dev-dependencies]
anyhow = "1.0.33"
